Разработанный класс. Бугрина

--- a/AirlinesBugrina.csproj
+++ b/AirlinesBugrina.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\TicketContext.cs" />
     <Compile Include="Models\Ticket.cs" />
     <Compile Include="Elements\Item.xaml.cs">
       <DependentUpon>Item.xaml</DependentUpon>
@@ -119,8 +120,6 @@
   <ItemGroup>
     <Resource Include="Images\Airplane.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Classes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
